@@ -1,3 +1,10 @@
+2004-08-08  Davyd Madeley  <davyd@madeley.id.au>
+
+	* gweather-pref.c:
+	* gweather.h:
+	* gweather.c: Add kPa to the list of pressure preferences. Closes
+	#149612. Patch by Ryan Lortie <desrt@desrt.ca>.
+
 2004-08-04  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* Locations.xml.in: Corrected Aguascaliantes to Aguascalientes
